--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,18 @@ torchvision==0.15.2
 tqdm==4.66.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+click==8.1.7
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.11.0
+fonttools==4.42.1
+joblib==1.3.2
+kiwisolver==1.4.5
+matplotlib==3.8.0
+nltk==3.8.1
+packaging==23.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+regex==2023.8.8
+six==1.16.0
+tqdm==4.66.1
